specs for get & list
